# Psychologist-aggregator

./: .env.example  .flake8  .gitignore  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  tailwind.config.js
aggregator/: paginators.py  serializers.py  urls.py  views.py
aggregator/_api/: filters.py  serializers.py  urls.py  views.py
assets/css/: main.css
calendar_engine/: admin.py  apps.py  constants.py  models.py  services.py  urls.py
calendar_engine/_api/: serializers.py  urls.py  views.py
calendar_engine/_web/: __init__.py  urls.py
calendar_engine/booking/: __init__.py  exceptions.py  selectors.py  services.py  throttles.py  validators.py
calendar_engine/lifecycle/: event_status_lifecycle.py  exceptions.py
calendar_engine/migrations/: 0001_initial.py  0002_alter_calendarevent_status_alter_timeslot_status.py  0003_alter_availabilityexception_options_and_more.py  0004_alter_availabilityexception_options_and_more.py  0005_alter_availabilityexception_reason.py  0006_alter_availabilityexception_options_and_more.py  0007_alter_availabilityexceptiontimewindow_override_slot_duration_and_more.py  (+7 more)
config/: settings.py  urls.py
core/: constants.py  urls.py
docs/: app_aggregator_info.md  app_calendar_info.md  app_users_info.md  fixture_methods_info.md  fixture_specialisations_info.md  fixture_topics_info.md  fixture_users_psychologists_info.md
fixtures/: methods.json  specialisations.json  topics.json  users_ps_availability_rule.json  users_ps_education.json  users_psychologists.json
users/: admin.py  constants.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
(+284 files in other folders)
